# AWSTranscribeBase

./: .gitignore  README.md  app.py  setup.cfg  setup.py  tox.ini
cdk/: cdk_stack.py  code_from_asset2.py
src/AWSTranscribeProcessor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/awslambda/email_notification/: email_template.md  handler.py
src/awslambda/media_processor/: handler.py  requirements.txt
