## Package Config ##
[metadata]
name = AWSTranscribeProcessor
version = 0.0
url = https://github.com/HanaPoulpe/AWSTranscriveBase
author = Hana Burtin
author_email = hana@hanaburtin.net
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Environment :: Console
    Framework :: AWS CDK
    Framework :: AWS CDK :: 1
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Education :: Testing
    Topic :: Multimedia
    Topic :: Office/Business
    Topic :: Text Processing :: Linguistic
    Topic :: Utilities
    Typing :: Typed
license = GPLv3
license_files = LICENSE
description = Rest API for sensor status dump.
long_description = file: README.md
keywords =

[options]
zip_safe = False
include_packages_data = True
packages = find:
package_dir =
    =src
    cdk=cdk
install_requires =
    aws-cdk.core==1.124.0
    aws-cdk.aws-s3
    aws-cdk.aws-s3-notifications
    aws-cdk.aws-lambda
    aws-cdk.aws-lambda-python
    boto3==1.20.31
tests_require =
    unittest
    coverage==6.1.2
    flake8==4.0.1
    mypy
    isort
    doc8
    docstr-coverage
    aws-lambda-powertools==1.24.0
python_requires = ~=3.9

[options.package_data]
* = *.txt, *.rst, *.md, *.conf, .yaml, *.json, *.sql

#[options.entry_points]
#console_scripts =
#

[options.packages.find]
where=src,cdk

## Tests Config ##

## http://coverage.readthedocs.io/en/latest/config.html
[coverage:run]
branch = True
include =
    src/*
    cdk/*

[coverage:paths]
source =
    src

[coverage:report]
exclude_lines =
    pragma: no cover
    if False
    \.\.\.
fail_under = 95
show_missing = True
# skip_empty = True

## http://mypy.readthedocs.io/en/latest/config_file.html
[mypy]
python_version = 3.10

[flake8]
max-line-length = 100
doctests = True
exclude =
    .git
    .eggs
    __pycache__
    tests/
    docs/
    build/
    dist/
    .tox
    *.egg
max-complexity =  10
statistics = True
ignore =
    D400
    D401
    D105
    DAR101
    DAR201
    DAR401
per-file-ignores =
    **/__init__.py: F401
